deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      tolerations:
      - key: dedicated
        operator: Equal
        value: uniqpanel
        effect: NoSchedule
      nodeSelector:
          dedicated: uniqpanel
      containers:
        - name: app
          resources:
            requests:
              cpu: "0.5"
              memory: "245Mi"
            limits:
              cpu: "2"
              memory: "1G"
          image: us.gcr.io/kizuna-188702/github.com/austinpray/uniqpanel/app:PLACEHOLDER
          imagePullPolicy: Always
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      tolerations:
      - key: dedicated
        operator: Equal
        value: uniqpanel
        effect: NoSchedule
      nodeSelector:
          dedicated: uniqpanel
      containers:
        - name: nginx
          resources:
            requests:
              cpu: "0.5"
              memory: "245Mi"
            limits:
              cpu: "2"
              memory: "1G"
          image: us.gcr.io/kizuna-188702/github.com/austinpray/uniqpanel/nginx:PLACEHOLDER
          imagePullPolicy: Always
      restartPolicy: Always

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "nginx"
  labels:
    app: "nginx"
  annotations:
    cloud.google.com/backend-config: '{"default": "nginx-backendconfig"}'
spec:
  ports:
  - protocol: "TCP"
    port: 80
  selector:
    app: "nginx"
  type: "NodePort"

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: uniqpanel-dot-app
    networking.gke.io/managed-certificates: uniqpanel-dot-app
spec:
  backend:
    serviceName: nginx
    servicePort: 80
